assets/css/main.styl
// vars---
$gutter = 30
$column = 84
// ---vars

@font-face
	font-family folioL
	src url(../font/Folio-Lig.otf)
	font-style normal
	font-weight 400
@font-face
	font-family garamondI
	src url(../font/GaramondPremrPro-ItCapt.otf)
	font-style normal
	font-weight 400
@font-face
	font-family garamondR
	src url(../font/GaramondPremrPro-Capt.otf)
	font-style normal
	font-weight 400
	


// utility---
p
	margin 0
ul
	margin 0
	padding 0
h2,h1,h3,h4
	margin 0
figure
	margin 0
a
	text-decoration none
	color #D1D3D4
	&.active
		color black
body
	font-size 14px

*, *:before, *:after
	box-sizing border-box

.container
	margin-left auto
	margin-right auto
	padding 0 50px
	@media (min-width: 1437px)
		width 1437px
		
.garamond-i
	font-family garamondI
	
::-webkit-scrollbar
	display none
// ---utility



// modifier---
._flex
	display flex
	> *
		flex 1 1 auto

._flex-col
	display flex
	flex-direction column
	> *
		flex 1 1 auto
._list-none
	list-style-type none
// ---modifier

// main---
.main
	background white
	transition transform .50s ease, blur .50s ease
// ---main



// header---
.mobile-nav
	display none
#header
	width 100%
	position fixed
	top 0
	left 0
	z-index 10
	transition transform .50s ease
	nav
		height 141px
		ul
			width 70%
			padding 0
			margin 0
			list-style-type none
			align-items flex-end
			padding-left $gutter + $column px
			transition transform .50s ease
			li
				position relative
					
.header-link
	width 100%
	font-family folioL
	position relative
	font-size : 12px;
	letter-spacing : 1.2px;
	text-transform : uppercase;
	color : #828279;
	color : rgb(130, 130, 121);
	display inline-block
	height 30px
	//padding 0 10px
	span
		transition all .50s ease
		display inline-block
	&.active,&:hover
		span
			color black
			transform translateY(30px)
.logo
	display block
	width 32.6%
	display flex
	justify-content flex-end
	a
		display inline-block
		width auto
		height 91px
		position relative
		img
			width auto
			height 100%
			right 0
			position absolute
			bottom -56px

#marker
	position fixed
	background black
	height 1px
// ---header
	

// content home---
.content-home
	justify-content flex-end
.home-text
	padding-top 150px
	padding-left 80px
	font-size : 60px;
	line-height : 59.6px;
	letter-spacing : -0.6px;
	color : #878774;
	font-weight normal
	display flex
	text-align center
// ---home


// content side nav---
.content-side-nav
	width 25.5%
	max-height 100%
	overflow auto
	li
		&.indent
			text-align center
.content-side-nav-group
	text-transform uppercase
	font-family : Folio;
	font-size : 14px;
	line-height : 22px;
	letter-spacing : 1.4px;
	color : #828279;
	margin-bottom 25px
	&:last-child
		margin-bottom 0
	li
		&:first-child
			padding-left 25px
	a:hover
		color black
			
.transformer
	font-family : folioL;
	font-size : 14px;
	line-height : 22px;
	letter-spacing : 1.4px;
	text-transform : uppercase;
	color : #828279;
	color : rgb(130, 130, 121);
	&.active
		color black
.side-nav-pagination
	a
		display inline-block
		margin-right 10px
		margin-bottom 10px
// ---content side nav


// the content---
.content
	padding-top 260px
	height 100vh
	width 100%
	padding-bottom 50px
.content-the-content
	width 74.5%
	padding-left 198px
	padding-right 198px
.content-overflow-inside
	//margin-left 198px
	max-height 438px
	overflow auto
	p
		font-family garamondR
		font-size : 20px;
		line-height : 25px;
		letter-spacing : 0.5px;
		color : #000000;
.content-overflow-process
	width 100%
	height 1px
	margin-top 30px
	position relative
	background white
	span
		position absolute
		left 0
		height 100%
		top 0
		background black
		display block
.content-download-link
	margin-top 50px
	a
		font-family : folioL;
		font-size : 12px;
		line-height : 22px;
		letter-spacing : 1.2px;
		text-transform : uppercase;
		color : #828279;
.content-footer
	justify-content space-between
	a
		font-family : folioL;
		font-size : 11px;
		letter-spacing : 1.1px;
		text-transform : uppercase;
		color : #828279;
// ---the content

// article---

.article-group
	li
		margin-bottom 20px
.article-side-nav
	width 14.8%
.article-content
	width 85.2%
	padding-left 144px
	padding-right 114px
.article-content-wrapper
	max-height unset
	overflow hidden
	p
		font-family : garamondI;
		font-size : 42px;
		line-height : 51.6px;
		color : #000000;
		text-align center
.article-more
	font-family folioL
	font-size : 12px;
	line-height : 22px;
	letter-spacing : 1.2px;
	text-transform : uppercase;
	color : #929390;
	font-style normal
	display inline-block
	margin-left 10px
// ---article

// partner---
.content-partners-article
	max-height 200px
.partners-img
	width 117px
	position relative
	overflow hidden
	margin-bottom 15px
	> div
		position absolute
		left 0
		right 0
		top 0
		bottom 0
		img
			width 100%
			height auto
	&:after
		content ''
		display block
		padding-top 120%
.content-partners
	margin-bottom $gutter px
.partners-name
	font-family garamondI
	font-size : 32px;
	line-height : 32px;
	letter-spacing : 1.4px;
	font-weight normal
	margin-bottom 5px
.partners-desc
	font-family folioL
	font-size : 14px;
	line-height : 20px;
	letter-spacing : 1.4px;
	font-weight normal
	color #828279
// ---partner

// contact & career---
.contact-content
	max-height unset
	overflow hidden
	flex-grow 10
	p
		font-family : garamondR
		font-style : italic;
		font-size : 36px;
		line-height : 40px;
		color : #000000;
		a
			color black
// ---contact & career

// marker-bottom----
.marker-bottom
	display none
// ---marker-bottom

// ---------------------------------------------------------------------------------------		
@media (max-width: 1437px)
	// content---
	.content-the-content
		padding-left 198px
		padding-right 198px
	// ---content
	
	// article---
	.article-content-wrapper
		p
			font-size 32px
	// ---article

@media (max-width: 1280px)
	// article---
	.article-content
		width 74.5%
		padding-right 0
	// ---article
	
	// content---
	.content-the-content
		padding 0 60px
	// ---content
	
	// header---
	.logo
		width 20%
		a
			height 78px
	#header
		nav
			ul
				width 80%
	// ---header
	
	.content-home
		display table
		padding 0
	.home-text
		display table-cell
		vertical-align middle
		padding 0
@media (max-width: 1024px)
	#header
		nav
			ul.header-ul
				padding 50px
				display block	
				position: fixed;
				right: -400px
				width 300px
				flex-direction: column;
				align-items: left;
				height 100vh
				background white
				.header-link.active,.header-link:hover
					span
						transform translateY(0)
						text-decoration underline
	.logo
		justify-content space-between
		> a
			display block
			img
				position relative
				bottom -40px
	.mobile-nav
		display flex
		flex-direction column
		justify-content center
	.hamburger
		height 20px
		width 30px
		position relative
		&:hover
			cursor pointer
		span
			position absolute
			height 2px
			background black
			width 100%
			left 0
			transition all .25s ease
			&:first-child
				top 0
			&:nth-child(2)
				top 50%
				transform translateY(-50%)
			&:last-child
				bottom 0
		&.active
			span:first-child
				top 10px
				transform rotate(45deg)
			span:nth-child(2)
				opacity 0
			span:last-child
				top 10px
				transform: rotate(-45deg) 
	.content
		padding-top 200px
	.content-side-nav
		max-height 438px
	.content-home
		padding-top 100px
	.article-content-wrapper
		p
			line-height 35px
	.marker-bottom
		display block
		position fixed
		bottom 0
		width 100%
		height 1px
		span
			display block
			background black
			width 0%
			height 100%
			transition width .25s ease
@media (max-width: 756px)
	.content-side-nav
		display none
	.container
		padding 0 25px
	.logo 
		> a 
			height 50px
			img
				bottom -30px
	#header
		nav
			height 100px
	.home-text
		font-size 30px
		line-height unset
	.content-the-content
		padding 0
	.content
		padding-top 130px
	.article-content-wrapper
		p
			text-align left
			font-size 18px
			line-height 30px
	.content-overflow-inside
		p
			font-size 18px
	.content-download-link
		margin-top 20px
	.content-overflow-inside
	.content-home
		padding-top 0
	.partners-img
		width 75px
	.partners-name
		font-size 22px
	.content-partners
		margin-bottom 20px
	.content-overflow-inside
		max-height 300px
	.content-partners-article
		max-height 200px
	.contact-content
		overflow none
		max-height unset
	.contact-content
		p
			line-height 30px
	.content-footer
		flex-direction column
	#marker
		display none

//----- Height
@media (min-width: 1024px ) and (max-height: 650px)
	.content
		padding-top 200px
	.fullpage-overflow
		max-height 350px
// ----- Height

@-moz-document url-prefix()
	.fullpage-overflow
		overflow: -moz-scrollbars-none;
	.content-side-nav
		overflow: -moz-scrollbars-none;

